--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Event Management Payment</title>
+  <title>Eventopia</title>
   <!-- Tailwind CSS will be imported via your React index.css -->
 </head>
 
